--- a/_posts/2015-04-18-dummy.markdown
+++ b/_posts/2015-04-18-dummy.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "Dummy Post"
 date:   2015-04-18 08:43:59
-author: Ben Centra
-categories: Dummy
+author: zhangtejun
+categories: test
 ---
 
 This is just a dummy post. Lorem ipsum and all the rest.
