--- a/_posts/2015-04-18-dummy.markdown
+++ b/_posts/2015-04-18-dummy.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Dummy Post"
+title:  "Dummyq Post"
 date:   2015-04-18 08:43:59
 author: zhangtejun
-categories: test
+categories: dummy
 ---
 
 This is just a dummy post. Lorem ipsum and all the rest.
