--- a/_posts/2017-05-22-css.markdown
+++ b/_posts/2017-05-22-css.markdown
@@ -262,9 +262,9 @@ section {
 }
 {% endhighlight %}
 <img src="{{ site.position | prepend: site.baseurl }}">
-### 这个例子和之前那个外观一模一样。请注意我们在容器上做了“清除浮动”。原本在这个例子中是不需要的，但是当 nav 比非浮动的内容还要高时就需要了。
+#### 这个例子和之前那个外观一模一样。请注意我们在容器上做了“清除浮动”。原本在这个例子中是不需要的，但是当 nav 比非浮动的内容还要高时就需要了。
 
-####  百分比宽度
+### 百分比宽度
 百分比是一种相对于包含块的计量单位。它对图片很有用：如下我们实现了图片宽度始终是容器宽度的50%.
 你甚至还能同时使用 min-width 和 max-width 来限制图片的最大或最小宽度！
 
