--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -12,20 +12,20 @@ categories: zhangtejun
 在那个时候，更多的都是静态网页，动态交互类型的网站不多。
 上述架构下，我们来看看数据存储的瓶颈是什么？
  
-	1. 数据量的总大小 一个机器放不下时
+    1. 数据量的总大小 一个机器放不下时
 
- 	2. 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
-       [参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
+    2. 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
+    参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
 
     3. 访问量(读写混合)一个实例不能承受
 		
 2. Memcached(缓存)+MySQL+垂直拆分
 
- 后来，随着访问量的上升，几乎大部分使用MySQL架构的网站在数据库上都开始出现了性能问题，web程序不再仅仅专注在功能上，同时也在追求性能。程序员们开始大量的使用缓存技术来缓解数据库的压力，优化数据库的结构和索引。
-开始比较流行的是通过文件缓存来缓解数据库压力，但是当访问量继续增大的时候，多台web机器通过文件缓存不能共享，大量的小文件缓存也带了了比较高的IO压力。在这个时候，Memcached就自然的成为一个非常时尚的技术产品。
+    后来，随着访问量的上升，几乎大部分使用MySQL架构的网站在数据库上都开始出现了性能问题，web程序不再仅仅专注在功能上，同时也在追求性能。程序员们开始大量的使用缓存技术来缓解数据库的压力，优化数据库的结构和索引。
+    开始比较流行的是通过文件缓存来缓解数据库压力，但是当访问量继续增大的时候，多台web机器通过文件缓存不能共享，大量的小文件缓存也带了了比较高的IO压力。在这个时候，Memcached就自然的成为一个非常时尚的技术产品。
 
-Memcached作为一个独立的分布式的缓存服务器，为多个web服务器提供了一个共享的高性能缓存服务，在Memcached服务器上，又发展了根据hash算法来进行多台Memcached缓存服务的扩展，
-然后又出现了一致性hash来解决增加或减少缓存服务器导致重新hash带来的大量缓存失效的弊端。
+    Memcached作为一个独立的分布式的缓存服务器，为多个web服务器提供了一个共享的高性能缓存服务，在Memcached服务器上，又发展了根据hash算法来进行多台Memcached缓存服务的扩展，
+    然后又出现了一致性hash来解决增加或减少缓存服务器导致重新hash带来的大量缓存失效的弊端。
 	
 3. Mysql主从读写分离
 由于数据库的写入压力增加，Memcached只能缓解数据库的读取压力。读写集中在一个数据库上让数据库不堪重负，大部分网站开始使用主从复制技术来达到读写分离，以提高读写性能和读库的可扩展性。Mysql的master-slave模式成为这个时候的网站标配了。
@@ -51,61 +51,60 @@ NoSQL(NoSQL = Not Only SQL )，意即“不仅仅是SQL”，
 （例如谷歌或Facebook每天为他们的用户收集万亿比特的数据）。这些类型的数据存储不需要固定的模式，无需多余操作就可以横向扩展。
 
 ##### 3 能干嘛	
+1. 易扩展
 
-1.  易扩展
-NoSQL数据库种类繁多，但是一个共同的特点都是去掉关系数据库的关系型特性。
+    NoSQL数据库种类繁多，但是一个共同的特点都是去掉关系数据库的关系型特性。
 
-数据之间无关系，这样就非常容易扩展。也无形之间，在架构的层面上带来了可扩展的能力。
+    数据之间无关系，这样就非常容易扩展。也无形之间，在架构的层面上带来了可扩展的能力。
 
 2. 大数据量高性能
-NoSQL数据库都具有非常高的读写性能，尤其在大数据量下，同样表现优秀。
 
-这得益于它的无关系性，数据库的结构简单。
+    NoSQL数据库都具有非常高的读写性能，尤其在大数据量下，同样表现优秀。
 
-一般MySQL使用Query Cache，每次表的更新Cache就失效，是一种大粒度的Cache，
+    这得益于它的无关系性，数据库的结构简单。
 
-在针对web2.0的交互频繁的应用，Cache性能不高。而NoSQL的Cache是记录级的，
+    一般MySQL使用Query Cache，每次表的更新Cache就失效，是一种大粒度的Cache，
 
-是一种细粒度的Cache，所以NoSQL在这个层面上来说就要性能高很多了
+    在针对web2.0的交互频繁的应用，Cache性能不高。而NoSQL的Cache是记录级的，是一种细粒度的Cache，所以NoSQL在这个层面上来说就要性能高很多了
 
 3. 多样灵活的数据模型
 
-NoSQL无需事先为要存储的数据建立字段，随时可以存储自定义的数据格式。而在关系数据库里，
+    NoSQL无需事先为要存储的数据建立字段，随时可以存储自定义的数据格式。而在关系数据库里，
 
-增删字段是一件非常麻烦的事情。如果是非常大数据量的表，增加字段简直就是一个噩梦
+    增删字段是一件非常麻烦的事情。如果是非常大数据量的表，增加字段简直就是一个噩梦
 
 4. 传统RDBMS VS NOSQL
 
-RDBMS vs NoSQL
+    RDBMS vs NoSQL
 
-RDBMS
-
-- 高度组织化结构化数据
-
-- 结构化查询语言（SQL）
-
-- 数据和关系都存储在单独的表中。
-
-- 数据操纵语言，数据定义语言
-
-- 严格的一致性
-
-- 基础事务
-
-NoSQL
-
-- 代表着不仅仅是SQL
-
-- 没有声明性查询语言
-
-- 没有预定义的模式
-
--键 - 值对存储，列存储，文档存储，图形数据库
-
-- 最终一致性，而非ACID属性
-
-- 非结构化和不可预知的数据
-
-- CAP定理
-
-- 高性能，高可用性和可伸缩性
+	RDBMS
+	
+	- 高度组织化结构化数据
+	
+	- 结构化查询语言（SQL）
+	
+	- 数据和关系都存储在单独的表中。
+	
+	- 数据操纵语言，数据定义语言
+	
+	- 严格的一致性
+	
+	- 基础事务
+	
+	NoSQL
+	
+	- 代表着不仅仅是SQL
+	
+	- 没有声明性查询语言
+	
+	- 没有预定义的模式
+	
+	-键 - 值对存储，列存储，文档存储，图形数据库
+	
+	- 最终一致性，而非ACID属性
+	
+	- 非结构化和不可预知的数据
+	
+	- CAP定理
+	
+	- 高性能，高可用性和可伸缩性
