--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -12,13 +12,13 @@ categories: zhangtejun
 在那个时候，更多的都是静态网页，动态交互类型的网站不多。
 上述架构下，我们来看看数据存储的瓶颈是什么？
  
-    1. 数据量的总大小 一个机器放不下时
+    * 数据量的总大小 一个机器放不下时
 
-    2. 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
+    * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
     参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
 
-    3. 访问量(读写混合)一个实例不能承受
-		
+    *访问量(读写混合)一个实例不能承受
+    	
 2. Memcached(缓存)+MySQL+垂直拆分
 
     后来，随着访问量的上升，几乎大部分使用MySQL架构的网站在数据库上都开始出现了性能问题，web程序不再仅仅专注在功能上，同时也在追求性能。程序员们开始大量的使用缓存技术来缓解数据库的压力，优化数据库的结构和索引。
@@ -108,3 +108,103 @@ NoSQL(NoSQL = Not Only SQL )，意即“不仅仅是SQL”，
 	- CAP定理
 	
 	- 高性能，高可用性和可伸缩性
+
+##### 3V+3高
+
+* 大数据时代的3V
+	* 海量Volume
+	* 多样Variety
+	* 实时Velocity
+* 互联网需求的3高
+	* 高并发
+	* 高可扩
+	* 高性能
+
+总结大型互联网应用(大数据、高并发、多样数据类型)的难点和解决方案
+
+* 难点
+	* 数据类型多样性
+	* 数据源多样性和变化重构
+	* 数据源改造而数据服务平台不需要大面积重构
+
+##### NoSQL数据模型简介
+以一个电商客户、订单、订购
+、地址模型来对比下关系型
+数据库和非关系型数据库
+
+**    传统的关系型数据库你如何设计？**
+ER图(1:1/1:N/N:N,主外键等常见)
+
+**1. nosql你如何设计**
+
+* 什么是BSON
+    * BSON（）是一种类json的一种二进制形式的存储格式，简称Binary JSON，它和JSON一样，支持内嵌的文档对象和数组对象
+* 用BSon画出构建的数据模型
+
+    ```json
+    {
+     "customer":{
+       "id":1136,
+       "name":"Z3",
+       "billingAddress":[{"city":"beijing"}],
+       "orders":[
+        {
+          "id":17,
+          "customerId":1136,
+          "orderItems":[{"productId":27,"price":77.5,"productName":"thinking in java"}],
+          "shippingAddress":[{"city":"beijing"}]
+          "orderPayment":[{"ccinfo":"111-222-333","txnid":"asdfadcd334","billingAddress":{"city":"beijing"}}],
+          }
+        ]
+      }
+    }
+    ```
+**2. 两者对比，问题和难点**
+
+	* 为什么上述的情况可以用聚合模型来处理
+	    * 高并发的操作是不太建议有关联查询的，互联网公司用冗余数据来避免关联查询
+		* 分布式事务是支持不了太多的并发的
+
+聚合模型
+
+* KV键值
+* bson
+* 列族 : 顾名思义，是按列存储数据的。最大的特点是方便存储结构化和半结构化数据，方便做数据压缩，
+对针对某一列或者某几列的查询有非常大的IO优势。
+* 图形
+
+##### NoSQL数据库的四大分类
+    KV键值：典型介绍
+		新浪：BerkeleyDB+redis
+		美团：redis+tair
+		阿里、百度：memcache+redis
+	文档型数据库(bson格式比较多)：典型介绍
+		CouchDB
+		MongoDB
+	列存储数据库
+		Cassandra, HBase
+		分布式文件系统
+	图关系数据库
+		它不是放图形的，放的是关系比如:朋友圈社交网络、广告推荐系统
+		社交网络，推荐系统等。专注于构建关系图谱
+		Neo4J, InfoGrid
+	四者对比
+##### 在分布式数据库中CAP原理CAP+BASE
+	传统的ACID分别是什么
+		A (Atomicity) 原子性
+		C (Consistency) 一致性
+		I (Isolation) 独立性
+		D (Durability) 持久性
+	CAP
+		C:Consistency（强一致性）
+		A:Availability（可用性）
+		P:Partition tolerance（分区容错性）
+	CAP的3进2
+	经典CAP图
+	BASE
+		是什么
+	分布式+集群简介
+
+
+
+
