--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -17,7 +17,7 @@ categories: zhangtejun
     * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
     参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
 
-    *访问量(读写混合)一个实例不能承受
+    * 访问量(读写混合)一个实例不能承受
     	
 2. Memcached(缓存)+MySQL+垂直拆分
 
@@ -174,36 +174,72 @@ ER图(1:1/1:N/N:N,主外键等常见)
 * 图形
 
 ##### NoSQL数据库的四大分类
-    KV键值：典型介绍
-		新浪：BerkeleyDB+redis
-		美团：redis+tair
-		阿里、百度：memcache+redis
-	文档型数据库(bson格式比较多)：典型介绍
-		CouchDB
-		MongoDB
-	列存储数据库
-		Cassandra, HBase
-		分布式文件系统
-	图关系数据库
-		它不是放图形的，放的是关系比如:朋友圈社交网络、广告推荐系统
-		社交网络，推荐系统等。专注于构建关系图谱
-		Neo4J, InfoGrid
+1. KV键值：典型介绍
+	* 新浪：BerkeleyDB+redis
+	* 美团：redis+tair
+	* 阿里、百度：memcache+redis
+2. 文档型数据库(bson格式比较多)：典型介绍
+	* CouchDB
+	* MongoDB
+3. 列存储数据库
+	* Cassandra, HBase
+	* 分布式文件系统
+4. 图关系数据库
+	* 它不是放图形的，放的是关系比如:朋友圈社交网络、广告推荐系
+    * 统社交网络，推荐系统等。专注于构建关系图谱
+	* Neo4J, InfoGrid
 	四者对比
+
 ##### 在分布式数据库中CAP原理CAP+BASE
-	传统的ACID分别是什么
-		A (Atomicity) 原子性
-		C (Consistency) 一致性
-		I (Isolation) 独立性
-		D (Durability) 持久性
-	CAP
-		C:Consistency（强一致性）
-		A:Availability（可用性）
-		P:Partition tolerance（分区容错性）
-	CAP的3进2
-	经典CAP图
-	BASE
-		是什么
-	分布式+集群简介
+1. 传统的ACID分别是什么
+	* A (Atomicity) 原子性
+	* C (Consistency) 一致性
+	* I (Isolation) 独立性
+	* D (Durability) 持久性
+2. CAP
+	* C:Consistency（强一致性）
+	* A:Availability（可用性）
+    * P:Partition tolerance（分区容错性）
+3. CAP的3进2
+    
+    CAP理论就是说在分布式存储系统中，最多只能实现上面的两点。
+    而由于当前的网络硬件肯定会出现延迟丢包等问题，所以
+    分区容忍性是我们必须需要实现的。
+    所以我们只能在一致性和可用性之间进行权衡，没有NoSQL系统能同时保证这三点。
+
+    C:强一致性 
+    
+    A：高可用性 
+    
+    P：分布式容忍性
+    
+    CA 传统Oracle数据库
+    
+    AP 大多数网站架构的选择
+    
+    CP Redis、Mongodb
+    
+    注意：分布式架构的时候必须做出取舍。
+    一致性和可用性之间取一个平衡。多余大多数web应用，其实并不需要强一致性。
+    因此牺牲C换取P，这是目前分布式数据库产品的方向
+    一致性与可用性的决择。
+    
+    对于web2.0网站来说，关系数据库的很多主要特性却往往无用武之地。
+    
+    * 数据库事务一致性需求
+    
+        * 很多web实时系统并不要求严格的数据库事务，对读一致性的要求很低， 有些场合对写一致性要求并不高。允许实现最终一致性。
+    
+    * 数据库的写实时性和读实时性需求
+        * 对关系数据库来说，插入一条数据之后立刻查询，是肯定可以读出来这条数据的，但是对于很多web应用来说，并不要求这么高的实时性，比方说发一条消息之 后，过几秒乃至十几秒之后，我的订阅者才看到这条动态是完全可以接受的。
+    
+    * 对复杂的SQL查询，特别是多表关联查询的需求
+        * 任何大数据量的web系统，都非常忌讳多个大表的关联查询，以及复杂的数据分析类型的报表查询，特别是SNS类型的网站，从需求以及产品设计角 度，就避免了这种情况的产生。往往更多的只是单表的主键查询，以及单表的简单条件分页查询，SQL的功能被极大的弱化了。
+    	
+4. 经典CAP图
+5. BASE
+6. 是什么
+7. 分布式+集群简介
 
 
 
