--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -14,8 +14,7 @@ categories: zhangtejun
  
     * 数据量的总大小 一个机器放不下时
 
-    * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
-    参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
+    * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）[参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
 
     * 访问量(读写混合)一个实例不能承受
     	
