--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -218,7 +218,7 @@ ER图(1:1/1:N/N:N,主外键等常见)
     
     CP Redis、Mongodb
     
-    注意：分布式架构的时候必须做出取舍。
+ **注意**：分布式架构的时候必须做出取舍。
     一致性和可用性之间取一个平衡。多余大多数web应用，其实并不需要强一致性。
     因此牺牲C换取P，这是目前分布式数据库产品的方向
     一致性与可用性的决择。
