--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "NoSql"
+title:  "NoSql概述"
 date:   2017-06-17 22:33:45
 author: zhangtejun
 categories: zhangtejun
@@ -14,7 +14,8 @@ categories: zhangtejun
  
     * 数据量的总大小 一个机器放不下时
 
-    * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）[参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
+    * 数据的索引（B+ Tree）一个机器的内存放不下时。（mysql中普遍使用B+Tree做索引，但在实现上又根据聚簇索引和非聚簇索引而不同。）
+    参考链接](http://www.cnblogs.com/exe19/p/5398292.html)
 
     * 访问量(读写混合)一个实例不能承受
     	
@@ -218,7 +219,7 @@ ER图(1:1/1:N/N:N,主外键等常见)
     
     CP Redis、Mongodb
     
- **注意**：分布式架构的时候必须做出取舍。
+    注意：分布式架构的时候必须做出取舍。
     一致性和可用性之间取一个平衡。多余大多数web应用，其实并不需要强一致性。
     因此牺牲C换取P，这是目前分布式数据库产品的方向
     一致性与可用性的决择。
@@ -236,9 +237,40 @@ ER图(1:1/1:N/N:N,主外键等常见)
         * 任何大数据量的web系统，都非常忌讳多个大表的关联查询，以及复杂的数据分析类型的报表查询，特别是SNS类型的网站，从需求以及产品设计角 度，就避免了这种情况的产生。往往更多的只是单表的主键查询，以及单表的简单条件分页查询，SQL的功能被极大的弱化了。
     	
 4. 经典CAP图
+
+    CAP理论的核心是：一个分布式系统不可能同时很好的满足一致性，可用性和分区容错性这三个需求，
+最多只能同时较好的满足两个。
+因此，根据 CAP 原理将 NoSQL 数据库分成了满足 CA 原则、满足 CP 原则和满足 AP 原则三 大类：
+
+    CA - 单点集群，满足一致性，可用性的系统，通常在可扩展性上不太强大。
+    
+    CP - 满足一致性，分区容忍必的系统，通常性能不是特别高。
+    
+    AP - 满足可用性，分区容忍性的系统，通常可能对一致性要求低一些。
+
 5. BASE
-6. 是什么
-7. 分布式+集群简介
+
+    BASE就是为了解决关系数据库强一致性引起的问题而引起的可用性降低而提出的解决方案。
+
+    BASE其实是下面三个术语的缩写：
+
+    * 基本可用（Basically Available）
+    * 软状态（Soft state）
+    * 最终一致（Eventually consistent）
+
+ 它的思想是通过让系统放松对某一时刻数据一致性的要求来换取系统整体伸缩性和性能上改观。为什么这么说呢，缘由就在于大型系统往往由于地域分布和极高性能的要求，不可能采用分布式事务来完成这些指标，要想获得这些指标，我们必须采用另外一种方式来完成，这里BASE就是解决这个问题的办法
+
+6. 分布式+集群简介
+
+ * 分布式系统（distributed system）
+ 
+    由多台计算机和通信的软件组件通过计算机网络连接（本地网络或广域网）组成。分布式系统是建立在网络之上的软件系统。正是因为软件的特性，所以分布式系统具有高度的内聚性和透明性。因此，网络和分布式系统之间的区别更多的在于高层软件（特别是操作系统），而不是硬件。分布式系统可以应用在在不同的平台上如：Pc、工作站、局域网和广域网上等。
+
+ 简单来讲：
+ 
+    1. 分布式：不同的多台服务器上面部署不同的服务模块（工程），他们之间通过Rpc/Rmi之间通信和调用，对外提供服务和组内协作。
+
+    2. 集群：不同的多台服务器上面部署相同的服务模块，通过分布式调度软件进行统一的调度，对外提供服务和访问。
 
 
 
