--- a/_posts/2017-06-18-Redis.md
+++ b/_posts/2017-06-18-Redis.md
@@ -103,7 +103,7 @@ categories: zhangtejun
 	* 单实例关闭：redis-cli shutdown
 	* 多实例关闭，指定端口关闭:redis-cli -p 6379 shutdown
 
-##### Redis启动后杂项基础知识讲解
+##### Redis启动后部分操作
 
 单进程:
 
