--- a/_posts/2017-07-01-kafka.md
+++ b/_posts/2017-07-01-kafka.md
@@ -31,7 +31,7 @@ Download the 0.11.0.0 release and un-tar it.
 ```
 * Step 2: Start the server
 
-```
+```shell
 nohup bin/kafka-server-start.sh config/server.properties > kafka.log 2>&1 &
 
 #jps 类似ps -ef
@@ -59,11 +59,11 @@ bin/kafka-topics.sh --zookeeper  zookeeperServerName:端口 --describe --topic t
 ```
 
 ##### 启动消费者
-```
+```shell
 ./bin/kafka-console-consumer.sh --zookeeper  zookeeperServerName:端口  --topic test
 ```
 ##### 启动生产者
-```
+```shell
 ./bin/kafka-console-producer.sh --broker-list kafkaServerName:端口 --topic test
 ```
 
