--- a/_posts/2017-08-13-进制转换.md
+++ b/_posts/2017-08-13-进制转换.md
@@ -41,13 +41,14 @@ UTF-8使用一种变长的编码方式。它可以使用1~4个字节表示一个
 UTF-8的编码规则：
 1. 对于单字节的符号，字节的第一位设为0，后面7位为这个符号的unicode码。因此对于英文字母，UTF-8编码和ASCII码是相同的。
 2. 对于n字节的符号（n>1），第一个字节的前n位都设为1，第n+1位设为0，后面字节的前两位一律设为10。剩下的没有提及的二进制位，全部为这个符号的unicode码。
-Unicode符号范围 | UTF-8编码方式
-(十六进制) | （二进制）
---------------------|---------------------------------------------
-0000 0000-0000 007F | 0xxxxxxx
-0000 0080-0000 07FF | 110xxxxx 10xxxxxx
-0000 0800-0000 FFFF | 1110xxxx 10xxxxxx 10xxxxxx
-0001 0000-0010 FFFF | 11110xxx 10xxxxxx 10xxxxxx 10xxxxxx
+
+|Unicode符号范围 | UTF-8编码方式|
+|(十六进制) | （二进制）|
+|--------------------|---------------------------------------------|
+|0000 0000-0000 007F | 0xxxxxxx|
+|0000 0080-0000 07FF | 110xxxxx 10xxxxxx|
+|0000 0800-0000 FFFF | 1110xxxx 10xxxxxx 10xxxxxx|
+|0001 0000-0010 FFFF | 11110xxx 10xxxxxx 10xxxxxx 10xxxxxx|
 
 跟据上图，如果一个字节的第一位是0，则这个字节单独就是一个字符；如果第一位是1，则连续有多少个1，就表示当前字符占用多少个字节。
 
