--- a/_posts/2017-08-13-进制转换.md
+++ b/_posts/2017-08-13-进制转换.md
@@ -32,6 +32,13 @@ Unicode 是为了解决传统的字符编码方案的局限而产生的，它为
 
 Unicode只是一个符号集，它只规定了符号的二进制代码，却没有规定这个二进制代码应该如何存储。
 
+计算机怎么知道某一个文件到底采用哪一种方式编码？
+
+Unicode规范中定义，每一个文件的最前面分别加入一个表示编码顺序的字符，这个字符的名字叫做"零宽度非换行空格"（ZERO WIDTH NO-BREAK SPACE），用FEFF表示。这正好是两个字节，而且FF比FE大1。
+如果一个文本文件的头两个字节是FE FF，就表示该文件采用大头方式；如果头两个字节是FF FE，就表示该文件采用小头方式。
+
+以汉字"严"为例，Unicode码是4E25，需要用两个字节存储，一个字节是4E，另一个字节是25。存储的时候，4E在前，25在后，就是Big endian方式；25在前，4E在后，就是Little endian方式。
+
 ##### UTF-8
 互联网的普及，强烈要求出现一种统一的编码方式。UTF-8就是在互联网上使用最广的一种Unicode的实现方式。
 其他实现方式还包括UTF-16（字符用两个字节或四个字节表示）和UTF-32（字符用四个字节表示），不过在互联网上基本不用。
@@ -52,6 +59,7 @@ UTF-8的编码规则：
 
 跟据上图，如果一个字节的第一位是0，则这个字节单独就是一个字符；如果第一位是1，则连续有多少个1，就表示当前字符占用多少个字节。
 
+[http://www.devba.com/index.php/archives/4777.html](http://www.devba.com/index.php/archives/4777.html)
 
 ```java
 @Test
