--- a/_posts/2017-05-23-JavaScript-13.md
+++ b/_posts/2017-05-23-JavaScript-13.md
@@ -3,7 +3,7 @@ layout: post
 title:  "13.JavaScript-类数组对象与arguments"
 date:   2017-05-23 13:35:21
 author: zhangtejun
-categories: zhangtejun
+categories: JavaScript
 ---
 
 # JavaScript深入之类数组对象与arguments
