--- a/_posts/2017-05-23-JavaScript-14.md
+++ b/_posts/2017-05-23-JavaScript-14.md
@@ -3,7 +3,7 @@ layout: post
 title:  "14.JavaScript-创建对象的多种方式以及优缺点"
 date:   2017-05-23 13:35:21
 author: zhangtejun
-categories: zhangtejun
+categories: JavaScript
 ---
 # JavaScript深入之创建对象的多种方式以及优缺点
 
