--- a/_posts/2017-05-23-JavaScript-15.md
+++ b/_posts/2017-05-23-JavaScript-15.md
@@ -3,7 +3,7 @@ layout: post
 title:  "15.JavaScript-继承的多种方式和优缺点"
 date:   2017-05-23 13:35:21
 author: zhangtejun
-categories: zhangtejun
+categories: JavaScript
 ---
 # JavaScript深入之继承的多种方式和优缺点
 
