--- a/_posts/2017-05-31-Java语法糖.md
+++ b/_posts/2017-05-31-Java语法糖.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Java语法糖"
 date:    2017-05-31 15:28:31
 author: zhangtejun
-categories: zhangtejun
+categories: Java
 ---
 ### Java语法糖
 ##### 什么是语法糖？
