--- a/_posts/2017-06-17-NoSql.md
+++ b/_posts/2017-06-17-NoSql.md
@@ -3,7 +3,7 @@ layout: post
 title:  "NoSql概述"
 date:   2017-06-17 22:33:45
 author: zhangtejun
-categories: zhangtejun
+categories: NoSql
 ---
 ##### 1 互联网时代背景下，为什么用nosql
 
