--- a/_posts/2017-06-26-Redis-主从复制.md
+++ b/_posts/2017-06-26-Redis-主从复制.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Redis的主从复制(Master/Slave)"
 date:   2017-06-26 21:13:00
 author: zhangtejun
-categories: zhangtejun
+categories: Redis
 ---
 ##### Redis(Master/Slave)
 `主从复制`:主机数据更新后根据配置和策略，自动同步到备机的master/slaver机制，Master以写为主，Slave以读为主。
