--- a/_posts/2017-07-01-kafka.md
+++ b/_posts/2017-07-01-kafka.md
@@ -3,7 +3,7 @@ layout: post
 title:  "kafka"
 date:   2017-07-01 10:29:00
 author: zhangtejun
-categories: zhangtejun
+categories: kafka
 ---
 ##### kafka
 高吞吐量分布式消息系统。
