--- a/_posts/2017-09-10-servlet.md
+++ b/_posts/2017-09-10-servlet.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Servlet"
 date:   2017-08-26 8:29:00
 author: zhangtejun
-categories: zhangtejun
+categories: servlet
 ---
 ##### Servlet 是什么？
 Java Servlet 是运行在 Web 服务器或应用服务器上的程序，它是作为来自 Web 浏览器或其他 HTTP 客户端的请求和 HTTP
