--- a/_posts/2017-09-17-mybatis.md
+++ b/_posts/2017-09-17-mybatis.md
@@ -3,7 +3,7 @@ layout: post
 title:  "myBatis"
 date:   2017-09-17 10:29:00
 author: zhangtejun
-categories: zhangtejun
+categories: myBatis
 ---
 ##### myBatis
 MyBatis 是一款优秀的持久层框架，它支持定制化 SQL、存储过程以及高级映射。
