--- a/_posts/2017-10-07-Linux常用操作及命令.md
+++ b/_posts/2017-10-07-Linux常用操作及命令.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Linux常用操作及命令"
 date:   2017-10-07 11:13:04
 author: zhangtejun
-categories: zhangtejun
+categories: linux
 ---
 ##### 什么是linux服务器load average？
 Load是用来度量服务器工作量的大小，即计算机cpu任务执行队列的长度，值越大，表明包括正在运行和待运行的进程数越多。
