--- a/_posts/2017-10-08-搭建 FTP 服务.md
+++ b/_posts/2017-10-08-搭建 FTP 服务.md
@@ -3,7 +3,7 @@ layout: post
 title:  "搭建 FTP 服务"
 date:   2017-10-08 09:13:04
 author: zhangtejun
-categories: zhangtejun
+categories: linux
 ---
 ##### 安装 vsftpd
 ```shell
