--- a/_posts/2018-04-12-微服务框架.md
+++ b/_posts/2018-04-12-微服务框架.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Servlet"
 date:   2018-04-12 13:29:00
 author: zhangtejun
-categories: zhangtejun
+categories: SpringCloud
 ---
 ##### Spring Cloud是一系列框架的有序集合
 Spring Cloud 是一个基于 Spring Boot 实现的微服务框架，它包含了实现微服务架构所需的各种组件。
