--- a/_posts/2017-05-23-JavaScript-12.md
+++ b/_posts/2017-05-23-JavaScript-12.md
@@ -3,7 +3,7 @@ layout: post
 title:  "12.JavaScript-new的模拟实现"
 date:   2017-05-23 13:35:21
 author: zhangtejun
-categories: zhangtejun
+categories: JavaScript
 ---
 # JavaScript深入之new的模拟实现
 
