--- a/_posts/2017-06-17-Redis入门介绍.md
+++ b/_posts/2017-06-17-Redis入门介绍.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Redis入门介绍"
 date:   2017-06-17 22:33:45
 author: zhangtejun
-categories: zhangtejun
+categories: Redis
 ---
 ##### 1 互联网时代背景下，为什么用nosql
 
