--- a/_posts/2017-06-17-js事件.md
+++ b/_posts/2017-06-17-js事件.md
@@ -3,7 +3,7 @@ layout: post
 title:  "js事件"
 date:   2017-06-17 09:12:45
 author: zhangtejun
-categories: zhangtejun
+categories: JavaScript
 ---
 ##### js表单校验
 1. 表单元素直接绑定事件处理函数
