--- a/_posts/2017-06-18-Redis.md
+++ b/_posts/2017-06-18-Redis.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Redis概述"
 date:   2017-06-17 10:29:00
 author: zhangtejun
-categories: zhangtejun
+categories: Redis
 ---
 ##### 概述
 
