--- a/_posts/2017-10-04-linux启动流程.md
+++ b/_posts/2017-10-04-linux启动流程.md
@@ -3,7 +3,7 @@ layout: post
 title:  "linux启动流程"
 date:   2017-10-04 18:44:21
 author: zhangtejun
-categories: zhangtejun
+categories: linux
 ---
 ##### 第一步、加载内核
 操作系统接管硬件以后，首先读入 /boot 目录下的内核文件。
