--- a/_posts/2019-02-01-工具类网址推荐.md
+++ b/_posts/2019-02-01-工具类网址推荐.md
@@ -8,19 +8,20 @@ categories: tools
 ##### Notepad++
 >已集成`sql,xml,json`等格式化插件。
 
-(Notepad++)[{{ site.Notepad++ | prepend: site.baseurl }}]
+[{{ site.Notepad++ | prepend: site.baseurl }}](Notepad++)
 ##### pandoc
 >pandoc convert files from one markup format into another
 
-(pandoc)[http://pandoc.org/]
+[http://pandoc.org/](pandoc)
 ##### ProcessOn
 >ProcessOn 支持流程图、思维导图、原型图、UML、网络拓扑图、组织结构图等，支持流程图、思维导图、原型图、UML、网络拓扑图、组织结构图等。
 
-(ProcessOn)[https://www.processon.com/]
+[https://www.processon.com/](ProcessOn)
 ##### draw.io
 >draw.io is free online diagram software for making flowcharts, process diagrams, org charts, UML, ER and network diagrams
-(draw.io)[https://www.draw.io/]
+[https://www.draw.io/](draw.io)
 
 ##### 渗透测试工具burpsuite
 >burpsuite
-(burpsuite)[https://portswigger.net/burp]
+
+[https://portswigger.net/burp](burpsuite)
