--- a/_posts/2019-02-01-工具类网址推荐.md
+++ b/_posts/2019-02-01-工具类网址推荐.md
@@ -7,8 +7,7 @@ categories: tools
 ---
 ##### Notepad++
 >已集成`sql,xml,json`等格式化插件。
-
-[{{ site.Notepad++ | prepend: site.baseurl }}](Notepad++)
+![Notepad++]({{ site.notepad | prepend: site.baseurl  }})
 ##### pandoc
 >pandoc convert files from one markup format into another
 
@@ -23,5 +22,4 @@ categories: tools
 
 ##### 渗透测试工具burpsuite
 >burpsuite
-
 [https://portswigger.net/burp](burpsuite)
