--- a/_posts/2019-02-01-工具类网址推荐.md
+++ b/_posts/2019-02-01-工具类网址推荐.md
@@ -7,7 +7,7 @@ categories: tools
 ---
 ##### Notepad++
 >已集成`sql,xml,json`等格式化插件。
-[{{ site.notepad | prepend: site.baseurl  }}](Notepad++)
+[{{ site.notepad | prepend: site.url  }}](Notepad++)
 ##### pandoc
 >pandoc convert files from one markup format into another
 
