--- a/_posts/2019-02-01-工具类网址推荐.md
+++ b/_posts/2019-02-01-工具类网址推荐.md
@@ -7,19 +7,19 @@ categories: tools
 ---
 ##### Notepad++
 >已集成`sql,xml,json`等格式化插件。
-[{{ site.notepad | prepend: site.url  }}](Notepad++)
+[Notepad++]({{ site.notepad | prepend: site.url  }})
 ##### pandoc
 >pandoc convert files from one markup format into another
 
-[http://pandoc.org/](pandoc)
+[pandoc](http://pandoc.org/)
 ##### ProcessOn
 >ProcessOn 支持流程图、思维导图、原型图、UML、网络拓扑图、组织结构图等，支持流程图、思维导图、原型图、UML、网络拓扑图、组织结构图等。
 
-[https://www.processon.com/](ProcessOn)
+[ProcessOn](https://www.processon.com/)
 ##### draw.io
 >draw.io is free online diagram software for making flowcharts, process diagrams, org charts, UML, ER and network diagrams
-[https://www.draw.io/](draw.io)
+[draw.io](https://www.draw.io/)
 
 ##### 渗透测试工具burpsuite
 >burpsuite
-[https://portswigger.net/burp](burpsuite)
+[burpsuite](https://portswigger.net/burp)
