--- a/_posts/2019-02-01-工具类网址推荐.md
+++ b/_posts/2019-02-01-工具类网址推荐.md
@@ -23,3 +23,7 @@ categories: tools
 ##### 渗透测试工具burpsuite
 >burpsuite
 [burpsuite](https://portswigger.net/burp)
+
+##### 对比工具
+>Araxis Merge Professional
+[Araxis Merge Professional]({{ site.Araxis | prepend: site.url  }})
