--- a/_posts/2017-09-17-mybatis.md
+++ b/_posts/2017-09-17-mybatis.md
@@ -505,3 +505,71 @@ ExecutorType。这个枚举类型定义了 3 个 值:
 
 
 
+
+当数据量大，数据库的结构比较复杂，Hibernate生成的sql语句会非常复杂，要让生成的语句使用正确的索引也比较困难。Hibernate对批处理的支持也不是
+太友好，在某些高并发，大数据量，低延迟的场景下，Hibernate不是太适应。
+
+Spring JDBC 没有提供映射文件，对象查询语言，缓存等概念，而是直接运行原生SQL语句，提供很多ORM化的CallBack。其功能远没有Hibernate强大，但是其灵活度非常高。
+
+相较于Hibernate，mybatis的可控性更高，给我们直接优化sql的时机，还提供强大的动态sql语句。
+
+
+##### 类型转换 TypeHandler
+```JAVA
+public interface TypeHandler<T> {
+  // 通过PreparedStatement为SQL语句绑定参数时，会将数据由JDBCType类型转为Java类型
+  void setParameter(PreparedStatement ps, int i, T parameter, JdbcType jdbcType) throws SQLException;
+  T getResult(ResultSet rs, String columnName) throws SQLException;
+  T getResult(ResultSet rs, int columnIndex) throws SQLException;
+  T getResult(CallableStatement cs, int columnIndex) throws SQLException;
+
+}
+```
+MyBatis所有类型转换器都实现了该接口，该接口定义了2类方法，共4个。setParameter方法负责将数据由JDBCType类型转为Java类型。
+getResult及其重载方法，负责将数据由Java类型转为JDBCType类型。
+
+为了方便用户自定义TypeHandler实现，mybatis提供了BaseTypeHandler抽象类，它实现TypeHandler接口，并继承TypeReference抽象类。
+
+BaseTypeHandler实现了setParameter和getResult方法，对于非空的处理交给子类去实现。其实现类很多，大部分都是调用PreparedStatement和Result或CallableStatement
+的对应方法。
+```java
+public class BigDecimalTypeHandler extends BaseTypeHandler<BigDecimal> {
+  @Override
+  public void setNonNullParameter(PreparedStatement ps, int i, BigDecimal parameter, JdbcType jdbcType)
+      throws SQLException {
+    ps.setBigDecimal(i, parameter);
+  }
+  @Override
+  public BigDecimal getNullableResult(ResultSet rs, String columnName)
+      throws SQLException {
+    return rs.getBigDecimal(columnName);
+  }
+  @Override
+  public BigDecimal getNullableResult(ResultSet rs, int columnIndex)
+      throws SQLException {
+    return rs.getBigDecimal(columnIndex);
+  }
+  @Override
+  public BigDecimal getNullableResult(CallableStatement cs, int columnIndex)
+      throws SQLException {
+    return cs.getBigDecimal(columnIndex);
+  }
+}
+```
+
+#### TypeHandlerRegistry
+TypeHandler如何被管理,如何知道何时用哪个TypeHandler接口来完成转换。
+
+在MyBatis初始化过程中，会为所有已知的 TypeHandler 创建对象，并注册到 TypeHandlerRegistry 中，由其来进行管理。
+
+
+#### TypeAliasRegistry
+在编写sql时，使用别名可以方便理解和维护，Mybatis将SQL语句中的别名进行了延申和扩展，可以为一个类添加别名，如何通过别名来引用。
+
+MyBatis通过TypeAliasRegistryl来完成别名的注册和管理,其结果很简单，默认为基本数类型，数组等注册了别名。
+
+```java
+private final Map<String, Class<?>> TYPE_ALIASES = new HashMap<String, Class<?>>();
+```
+
+####
