--- a/_posts/2019-10-16-cache.md
+++ b/_posts/2019-10-16-cache.md
@@ -111,12 +111,12 @@ private String[] getProxyImports() {
     return StringUtils.toStringArray(result);
 }
 ```
-##### AutoProxyRegistrar
+##### AutoProxyRegistrar(主要是注册 internalAutoProxyCreator bean)
 ```java
 public class AutoProxyRegistrar implements ImportBeanDefinitionRegistrar {
     public void registerBeanDefinitions(AnnotationMetadata importingClassMetadata, BeanDefinitionRegistry registry) {
         boolean candidateFound = false;
-        // 1.获取Application类上的注解，也就是@EnableCaching注解
+        // 1.获取注解元信息，也就是@EnableCaching注解
         Set<String> annTypes = importingClassMetadata.getAnnotationTypes();
         Iterator var5 = annTypes.iterator();
         while(var5.hasNext()) {
@@ -157,7 +157,33 @@ public class AutoProxyRegistrar implements ImportBeanDefinitionRegistrar {
     // 注入InfrastructureAdvisorAutoProxyCreator
 		return registerOrEscalateApcAsRequired(InfrastructureAdvisorAutoProxyCreator.class, registry, source);
 	}
-
+//
+@Nullable
+    private static BeanDefinition registerOrEscalateApcAsRequired(Class<?> cls, BeanDefinitionRegistry registry, @Nullable Object source) {
+        Assert.notNull(registry, "BeanDefinitionRegistry must not be null");
+        if (registry.containsBeanDefinition("org.springframework.aop.config.internalAutoProxyCreator")) {
+            BeanDefinition apcDefinition = registry.getBeanDefinition("org.springframework.aop.config.internalAutoProxyCreator");
+            // 如果容器中已经存在自动代理构建器，则比较两个构建器的优先级
+            if (!cls.getName().equals(apcDefinition.getBeanClassName())) {
+                int currentPriority = findPriorityForClass(apcDefinition.getBeanClassName());
+                int requiredPriority = findPriorityForClass(cls);
+                if (currentPriority < requiredPriority) {
+                    // 保存优先级高的构建器
+                    apcDefinition.setBeanClassName(cls.getName());
+                }
+            }
+            return null;
+        } else {
+            // 如果容器中还没有自动代理构建器，则创建构建器相应的BeanDefinition对象
+            RootBeanDefinition beanDefinition = new RootBeanDefinition(cls);
+            beanDefinition.setSource(source);
+            beanDefinition.getPropertyValues().add("order", -2147483648);
+            beanDefinition.setRole(2);
+            // 向容器中注册代理构建器的BeanDefinition对象
+            registry.registerBeanDefinition("org.springframework.aop.config.internalAutoProxyCreator", beanDefinition);
+            return beanDefinition;
+        }
+    }
 ```
 ##### ProxyCachingConfiguration
 ```java
